# ddp_contact

./: .gitignore  .gitmodules  .project  README.md  cmake_build.sh
Matlab/ADMM/: ADMMOuter2.m  ADMM_CEN.m  ADMM_CONE.m  ADMM_DDP_CEN.m  ADMM_DDP_MBLOCKS.m  ADMM_TRACKING.m  FK_SE3.m  FK_exp.m  FK_exp_7dof.m  IK_SE3.m  IKinSpace_modified_initial.m  contactmodel.m  convert_q2x.m  demo_7DOF_ADMM_DDP.m  demo_dynamics_ADMM_3BLKS.m  demo_robot.m  demo_robot_7dof.m  demo_robot_7dof_C.m  demo_robot_7dof_C_Contact.m  demo_robot_7dof_C_dynamics.m  demo_robot_7dof_C_kinematics.m  demo_robot_7dof_contact.m  demo_robot_Point_Mass.m  demo_robot_Vector_Mass.m  demo_robot_Vector_Mass_dynamics.m  demo_robot_Vector_Mass_kinematics.m  demo_vector_mass_ADMM_DDP.m  demo_vector_mass_ADMM_DDP_MULTI.m  demo_vector_mass_base_ADMM_DDP.m  demo_vector_mass_dynamics_ADMM.m  demo_vector_mass_dynamics_ADMM_CEN.m  demo_vector_mass_kinematics_ADMM.m  fk_test.m  generate_data_file.m  iLQG.m  iLQG2.m  iLQG_ADMM.m  iLQG_ADMM_CEN.m  inertial_params_KUKA.mat  lissajous_curve.m  (+4 more)
Matlab/ADMM/7-DOF-robot/: C_kuka.m  FK_kuka.m  INV_kuka.m  Jac_kuka_vec.m  Jac_kuka_vec_T.m  fdyn.m  fdyn_contact.m  inv_dyn_T.m  inv_kinematics.m  jacobian_ee.m  kukaAnalytical_qdd.m  manipulator_POE.m  robot_obj.m
Matlab/ADMM/ADMM_3BLKS/: ADMM_DDP.m  ADMM_DDP_2BLKS.m  ADMM_DDP_2BLKS_DYN_TIME.m  ADMM_DDP_3BLKS.m  ADMM_DDP_3BLKS_SEQUENTIAL.m  IKinSpace_modified_initial.m  comparison.asv  comparison.m  contact_model_deep_learning.m  convert_q2x.m  demo_dynamics_ADMM_2BLKS.m  demo_dynamics_ADMM_2BLKS_DYN_TIME.m  demo_dynamics_ADMM_3BLKS.asv  demo_dynamics_ADMM_3BLKS.m  demo_dynamics_ADMM_3BLKS_DYN_TIME.m  demo_dynamics_ADMM_3BLKS_MPC.m  demo_dynamics_ADMM_3BLKS_SEQUENTIAL.asv  demo_dynamics_ADMM_3BLKS_SEQUENTIAL.m  iLQG_TRACK.m  startup.m
Matlab/ADMM/ADMM_3BLKS/IK_solvers/: IKinSpace_modified_second_order.m  bar_data.mat  ik_test.m  kuka.m  kuka_second_order_IK.m  kuka_test_second_order.m
Matlab/ADMM/ADMM_3BLKS/comparison_data/: (1e-4,0,0,0,0.1).fig  (1e-4,1e-4,0,0,0.1).fig
Matlab/ADMM/ADMM_3BLKS/dynamics/: KUKA_Inertial_Params.m  contact_model_dyn.m  fdyn_dynamics.m  fdyn_dynamics_admm_2blk_dyn_time.m  fdyn_dynamics_admm_3blk.asv  fdyn_dynamics_admm_3blk.m  fdyn_dynamics_admm_3blk_dyn_time.m  kukaAnalytical_qdd.m  lbr820.urdf  manipulator_POE_EE.m
Matlab/ADMM/ADMM_3BLKS/dynamics/kuka/: Copy_of_C_kuka.m  Copy_of_M_kuka.m  FK_kuka.m  FK_kuka_vec.m  JacDot_kuka.m  Jac_kuka.m  inertial_params_KUKA.mat
Matlab/ADMM/ADMM_3BLKS/test_data/: consensus.fig  consensus_admm_dyn_time.mat
Matlab/ADMM/curvature/: demo2d.m  demo3d.m  license.txt
Matlab/ADMM/data/: data_circle.mat  data_eight.mat  data_eight_new.mat  data_kuka.mat  data_kuka_1.mat  data_kuka_2.mat  data_line.mat
Matlab/ADMM/figures/: path.fig
Matlab/ADMM/point-mass/: coriolis_M.m  fdyn.m  gravity_M.m  mass_M.m
Matlab/ADMM/vector-mass/: KUKA_Inertial_Params.m  circle.txt  circle_.txt  data_eight.mat  fdyn.m  fdyn_dynamics.asv  fdyn_dynamics.m  fdyn_dynamics_admm_3blk.m  fdyn_dynamics_base.m  fdyn_dynamics_ext.asv  fdyn_kinematics.m  fdyn_w_base.m  lbr820_m.urdf  manipulator_POE.m  robot_model_dyn.m
Matlab/ADMM/vector-mass/kuka/: C_kuka.m  Copy_of_G_kuka.m  G_kuka.m  Jac_kuka.m  Jac_n_kuka.m  M_kuka.m  params.mat
Matlab/IK_solvers/: IKinSpace_modified.m  IKinSpace_modified_second_order.m  kuka_test.m  kuka_test_second_order.m  startup.m
documents/: Psudo code - DDP-MPC
force-control/: CMakeLists.txt  ForceControlConfig.cmake.in
force-control/contact_model/: SoftContactModel.hpp
force-control/force_control/: AdmittanceForceController.cpp
force-control/include/: AdmittanceForceController.h  KUKAAnalyticalSolutions.h  KukaModel.h  RobotAbstract.h  RobotAnalytical.h  SoftContactModel.hpp
force-control/include-ddp/: cost.h  dynamics.h  ilqr.h  manipulator.h  optimizer_base.h  plant.h  sqp.h
force-control/src/: cost.cpp  kuka.cpp  sqp.cpp
force-control/src_test/: KukaBot.cpp  KukaModel.cpp  models.cpp
standalone/: CMakeLists.txt
standalone/cartpole/: CMakeLists.txt  cartpole.cpp  cartpole.h  cartpolewindow.cpp  cartpolewindow.h  cartpolewindow.ui
standalone/data/: cartesian_trajectory_admm.npy  plot_state_trajectory_ddp.py  state_trajectory_ddp.npy
standalone/include/: IKTrajectory.hpp  IK_solver.hpp  SoftContactModel.h  admm.hpp  config.h  cost_function.h  cost_function_admm.h  cost_function_kuka_arm.h  ddp.h  ilqrsolver.h  ilqrsolver_admm.hpp  kuka_arm.h  kuka_arm_track.h  kuka_robot.hpp  mpc.hpp  mpc_admm.hpp  plant.h
standalone/include/old/: cost_function_kuka_arm.h  cost_function_kuka_arm_track.h  ddp_runner.h  ilqrsolver_track.h  kuka_arm_track.h
standalone/matplotlib-cpp/: CMakeLists.txt
standalone/src/: IK_solver.cpp  KukaModel.cpp  admm.cpp  admm_main.cpp  admm_mpc_main.cpp  cost_function_kuka_arm.cc  ddp.cpp  ddp_main.cpp  ik_test.cpp  ilqrsolver.cpp  ilqrsolver_admm.cpp  kuka_arm.cpp  models.cc  mpc-main.cpp  mpc_main.cpp  plant.cpp  runddp_softcontact.cc  test.cpp  test_curvature.cpp
standalone/src/old/: cost_function_kuka_arm.cc  cost_function_kuka_arm_track.cc  ddp_runner.cc  runddp_softcontact.cc
